--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Neda Parvini Portfolio</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
 
 </head>
 
@@ -23,9 +23,9 @@
             <table>
                 <tr>
                     <td style="background-color:#65c7ce;"><img
-                            src="C:\Neda\Bootcamp\ucd-virt-bo-fsf-pt-09-2021-u-b\02-Advanced-CSS\02-Challenge\Assets\images\MyAvatar.png"
+                            src=".\Assets\images\MyAvatar.png"
                             alt="Neda's Avatar" title="Neda's Avatar"></td>
-                    <td><img src="C:\Neda\Bootcamp\ucd-virt-bo-fsf-pt-09-2021-u-b\02-Advanced-CSS\02-Challenge\Assets\images\banner.jpg"
+                    <td><img src=".\Assets\images\banner.jpg"
                             alt="banner" title="banner"></td>
                 </tr>
             </table>
@@ -56,25 +56,25 @@
                                     </tr>
                                     <td colspan="2" style="border:4px solid #65c7ce"><a
                                             href="https://www.nedaparvini.com"><img
-                                                src="C:\Neda\Bootcamp\ucd-virt-bo-fsf-pt-09-2021-u-b\02-Advanced-CSS\02-Challenge\Assets\images\npws.jpg"
+                                                src=".\Assets\images\npws.jpg"
                                                 alt="Neda Parvini Website" title="Neda Parvini Website"
                                                 class="container"></a></td>
                         </tr>
                         <tr>
                             <td style="border:4px solid #65c7ce"><a href="https://www.nedaparvini.com/dsivid"><img
-                                        src="C:\Neda\Bootcamp\ucd-virt-bo-fsf-pt-09-2021-u-b\02-Advanced-CSS\02-Challenge\Assets\images\dsivide.jpg"
+                                        src=".\Assets\images\dsivide.jpg"
                                         alt="video Clip" title="Video Clip" class="container"></a></td>
                             <td style="border:4px solid #65c7ce"><a href="https://www.nedaparvini.com/dsi-tshirt"><img
-                                        src="C:\Neda\Bootcamp\ucd-virt-bo-fsf-pt-09-2021-u-b\02-Advanced-CSS\02-Challenge\Assets\images\dsitsh.jpg"
+                                        src=".\Assets\images\dsitsh.jpg"
                                         alt="Tshirt Desgin" title="Tshirt Desgin" class="container"></a></td>
                         </tr>
                         <tr>
                             <td style="border:4px solid #65c7ce"><a href="https://www.nedaparvini.com/wrsa"><img
-                                        src="C:\Neda\Bootcamp\ucd-virt-bo-fsf-pt-09-2021-u-b\02-Advanced-CSS\02-Challenge\Assets\images\wrsa.jpg"
+                                        src=".\Assets\images\wrsa.jpg"
                                         alt="Book Cover Design" title="Book Cover Design" class="container"></a></td>
                             <td style="border:4px solid #65c7ce"><a
                                     href="http://rahavar-ce.com/english/indexen.html"><img
-                                        src="C:\Neda\Bootcamp\ucd-virt-bo-fsf-pt-09-2021-u-b\02-Advanced-CSS\02-Challenge\Assets\images\rahavar.jpg"
+                                        src=".\Assets\images\rahavar.jpg"
                                         alt="CMS Based Website" title="CMS Based Website" class="container"></a></td>
                         </tr>
                     </table>
@@ -102,7 +102,7 @@
                             </p>
                         </td>
                         <td class="column" style="border-left:4px solid #13293d;"><iframe
-                                src="C:\Neda\Bootcamp\ucd-virt-bo-fsf-pt-09-2021-u-b\02-Advanced-CSS\02-Challenge\Assets\pdf\NEDAPARVINI.pdf"
+                                src=".\Assets\pdf\NEDAPARVINI.pdf"
                                 width="100%" height="500px">
                             </iframe></td>
 
