--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                                         src=".\Assets\images\wrsa.jpg"
                                         alt="Book Cover Design" title="Book Cover Design" class="container"></a></td>
                             <td style="border:4px solid #65c7ce"><a
-                                    href="http://rahavar-ce.com/english/indexen.html"><img
-                                        src=".\Assets\images\rahavar.jpg"
-                                        alt="CMS Based Website" title="CMS Based Website" class="container"></a></td>
+                                    href="https://itsjustpeachy.github.io/SYNT-Doctrina"><img
+                                        src=".\Assets\images\prjimg.jpg"
+                                        alt="Group Project" title="Group Project" class="container"></a></td>
                         </tr>
                     </table>
                     </td>
