--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                                                 class="container"></a></td>
                         </tr>
                         <tr>
-                            <td style="border:4px solid #65c7ce"><a href="https://www.nedaparvini.com/dsivid"><img
-                                        src=".\Assets\images\dsivide.jpg"
+                            <td style="border:4px solid #65c7ce"><a href="https://github.com/nelsonRoberts1968/after_school/tree/main"><img
+                                        src=".\Assets\images\proj2.jpg"
                                         alt="video Clip" title="Video Clip" class="container"></a></td>
                             <td style="border:4px solid #65c7ce"><a href="https://www.nedaparvini.com/dsi-tshirt"><img
                                         src=".\Assets\images\dsitsh.jpg"
