--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <tr>
                             <td style="border:4px solid #65c7ce"><a href="https://github.com/nelsonRoberts1968/after_school/tree/main"><img
                                         src=".\Assets\images\proj2.jpg"
-                                        alt="video Clip" title="Video Clip" class="container"></a></td>
+                                        alt="Club Hub Kids" title="Club Hub Kids" class="container"></a></td>
                             <td style="border:4px solid #65c7ce"><a href="https://www.nedaparvini.com/dsi-tshirt"><img
                                         src=".\Assets\images\dsitsh.jpg"
                                         alt="Tshirt Desgin" title="Tshirt Desgin" class="container"></a></td>
