--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                                         alt="Tshirt Desgin" title="Tshirt Desgin" class="container"></a></td>
                         </tr>
                         <tr>
-                            <td style="border:4px solid #65c7ce"><a href="https://www.nedaparvini.com/wrsa"><img
-                                        src=".\Assets\images\wrsa.jpg"
-                                        alt="Book Cover Design" title="Book Cover Design" class="container"></a></td>
+                            <td style="border:4px solid #65c7ce"><a href="https://plenty-in-the-pantry.herokuapp.com/"><img
+                                        src=".\Assets\images\plenty.jpg"
+                                        alt="Plenty App" title="Plenty App" class="container"></a></td>
                             <td style="border:4px solid #65c7ce"><a
                                     href="https://itsjustpeachy.github.io/SYNT-Doctrina"><img
                                         src=".\Assets\images\prjimg.jpg"
